--- a/packages/seacas/scripts/CMakeLists.txt
+++ b/packages/seacas/scripts/CMakeLists.txt
@@ -69,8 +69,10 @@ ASSERT_DEFINED(BUILD_SHARED_LIBS)
 IF (${PROJECT_NAME}_ENABLE_SEACASExodus)
    IF (${PythonInterp_FIND_VERSION} VERSION_LESS "3.0")
       SET( INPUT "${CMAKE_CURRENT_SOURCE_DIR}/exodus-2.py.in" )
+      MESSAGE(STATUS "A Python-2 version of Exodus.py will be installed.")
    ELSE()
       SET( INPUT "${CMAKE_CURRENT_SOURCE_DIR}/exodus-3.py.in" )
+      MESSAGE(STATUS "A Python-3 version of Exodus.py will be installed.")
    ENDIF()
 
    IF (BUILD_SHARED_LIBS)
@@ -80,9 +82,8 @@ IF (${PROJECT_NAME}_ENABLE_SEACASExodus)
 		@ONLY
 		)
       INSTALL(PROGRAMS ${CMAKE_CURRENT_BINARY_DIR}/exodus.py DESTINATION lib)
-      MESSAGE(STATUS "Exodus.py NOT installed since shared exodus library is not available.")
    ELSE()
-      MESSAGE(STATUS "Exodus.py NOT installed since Python interpreter was not found.")
+      MESSAGE(STATUS "Exodus.py NOT installed since shared exodus library is not available.")
    ENDIF()
 ELSE()
       MESSAGE(STATUS "Exodus.py NOT installed since Exodus is not enabled.")
