EXODUS.PY: Use locale en_US.utf-8 [ci skip]

--- a/packages/seacas/scripts/exodus-3.py.in
+++ b/packages/seacas/scripts/exodus-3.py.in
@@ -147,7 +147,7 @@ def getExodusVersion():
 
 
 try:
-    locale.setlocale(locale.LC_ALL, 'en_US')
+    locale.setlocale(locale.LC_ALL, 'en_US.utf-8')
 except locale.Error:
     locale.setlocale(locale.LC_ALL, 'C')
 
