EXODUS.PY: Clean up [ci skip]

--- a/packages/seacas/scripts/exodus-3.py.in
+++ b/packages/seacas/scripts/exodus-3.py.in
@@ -1030,7 +1030,7 @@ class exodus:
             self.coordsX = ctype_to_numpy(self, self.coordsX)
             self.coordsY = ctype_to_numpy(self, self.coordsY)
             self.coordsZ = ctype_to_numpy(self, self.coordsZ)
-        return (self.coordsX, self.coordsY, self.coordsZ)
+        return self.coordsX, self.coordsY, self.coordsZ
 
     # --------------------------------------------------------------------
 
@@ -1065,7 +1065,7 @@ class exodus:
 
         """
         listX, listY, listZ = self.__ex_get_partial_coord(i, 1)
-        return (listX[0], listY[0], listZ[0])
+        return listX[0], listY[0], listZ[0]
 
     # --------------------------------------------------------------------
 
@@ -1895,10 +1895,7 @@ class exodus:
         if self.use_numpy:
             elem_block_connectivity = ctype_to_numpy(
                 self, elem_block_connectivity)
-        return (
-            elem_block_connectivity,
-            num_elem_this_blk.value,
-            num_nodes_per_elem.value)
+        return elem_block_connectivity, num_elem_this_blk.value, num_nodes_per_elem.value
 
     # --------------------------------------------------------------------
 
@@ -2832,7 +2829,7 @@ class exodus:
             (numSetNodes, numSetDistFacts) = self.__ex_get_set_param('EX_NODE_SET', nodeSetId)
             totNumSetNodes += numSetNodes
             totNumSetDistFacts += numSetDistFacts
-        return (totNumSetNodes, totNumSetDistFacts)
+        return totNumSetNodes, totNumSetDistFacts
 
     # --------------------------------------------------------------------
 
@@ -2855,7 +2852,7 @@ class exodus:
         num_set_dist_facts : int
         """
         (numSetEntities, numSetDistFacts) = self.__ex_get_set_param(object_type, object_id)
-        return (numSetEntities, numSetDistFacts)
+        return numSetEntities, numSetDistFacts
 
     # --------------------------------------------------------------------
 
@@ -2887,7 +2884,7 @@ class exodus:
         """ See `exodus.put_set_params` """
 
         (numSetNodes, numSetDistFacts) = self.__ex_get_set_param('EX_NODE_SET', object_id)
-        return (numSetNodes, numSetDistFacts)
+        return numSetNodes, numSetDistFacts
 
     # --------------------------------------------------------------------
 
@@ -3119,7 +3116,7 @@ class exodus:
             totNumSetSides += numSetSides
             totNumSetDistFacts += numSetDistFacts
         totNumSetNodes = totNumSetDistFacts
-        return (totNumSetSides, totNumSetNodes, totNumSetDistFacts)
+        return totNumSetSides, totNumSetNodes, totNumSetDistFacts
 
     # --------------------------------------------------------------------
 
@@ -3146,7 +3143,7 @@ class exodus:
         than once, i.e. once for each face it belongs to in the side set.
         """
         (numSetSides, numSetDistFacts) = self.__ex_get_set_param('EX_SIDE_SET', object_id)
-        return (numSetSides, numSetDistFacts)
+        return numSetSides, numSetDistFacts
 
     # --------------------------------------------------------------------
 
@@ -3200,7 +3197,7 @@ class exodus:
         if self.use_numpy:
             side_set_elem_list = ctype_to_numpy(self, side_set_elem_list)
             side_set_side_list = ctype_to_numpy(self, side_set_side_list)
-        return (side_set_elem_list, side_set_side_list)
+        return side_set_elem_list, side_set_side_list
 
     # --------------------------------------------------------------------
 
@@ -3314,7 +3311,7 @@ class exodus:
             side_set_node_cnt_list = ctype_to_numpy(
                 self, side_set_node_cnt_list)
             side_set_node_list = ctype_to_numpy(self, side_set_node_list)
-        return (side_set_node_cnt_list, side_set_node_list)
+        return side_set_node_cnt_list, side_set_node_list
 
     # --------------------------------------------------------------------
 
@@ -4719,7 +4716,7 @@ class exodus:
             self.fileId,
             elem_block_id,
             byref(elem_block_connectivity))
-        return (elem_block_connectivity, num_elem_this_blk, num_nodes_per_elem)
+        return elem_block_connectivity, num_elem_this_blk, num_nodes_per_elem
 
     # --------------------------------------------------------------------
 
@@ -4904,7 +4901,7 @@ class exodus:
             side_set_id,
             byref(num_side_in_set),
             byref(num_dist_fact_in_set))
-        return (int(num_side_in_set.value), int(num_dist_fact_in_set.value))
+        return int(num_side_in_set.value), int(num_dist_fact_in_set.value)
 
     # --------------------------------------------------------------------
 
@@ -4927,7 +4924,7 @@ class exodus:
         side_set_id = c_longlong(sideSetId)
         (num_side_in_set, _num_dist_fact_in_set) = self.__ex_get_set_param('EX_SIDE_SET', sideSetId)
         if num_side_in_set == 0:
-            return ([], [])
+            return [], []
         if EXODUS_LIB.ex_int64_status(self.fileId) & EX_BULK_INT64_API:
             side_set_elem_list = (c_longlong * num_side_in_set)()
             side_set_side_list = (c_longlong * num_side_in_set)()
@@ -4937,7 +4934,7 @@ class exodus:
         EXODUS_LIB.ex_get_side_set(self.fileId, side_set_id,
                                    byref(side_set_elem_list),
                                    byref(side_set_side_list))
-        return (side_set_elem_list, side_set_side_list)
+        return side_set_elem_list, side_set_side_list
 
     # --------------------------------------------------------------------
 
@@ -4998,7 +4995,7 @@ class exodus:
         EXODUS_LIB.ex_get_side_set_node_list(self.fileId, side_set_id,
                                              byref(side_set_node_cnt_list),
                                              byref(side_set_node_list))
-        return (side_set_node_cnt_list, side_set_node_list)
+        return side_set_node_cnt_list, side_set_node_list
 
     # --------------------------------------------------------------------
 
@@ -5832,7 +5829,7 @@ def copyTransfer(
         handle both array types correctly.)
     additionalGlobalVariables : list
         list of global variable names to add.
-    additionalNodalVaraibles: list
+    additionalNodalVariables: list
         list of nodal variable names to add.
     additionalElementVariables: list
         should be a list of element variable
@@ -5857,8 +5854,8 @@ def copyTransfer(
     >>> ## Add elem_attr_dummy1 on blkIds 1,2,3 and elem_attr_dummy2 on all blocks
     >>> addElementAttributes = [ ("elem_attr_dummy1",[1,2,3]), "elem_attr_dummy2" ]
 
-    >>> toFileHandle = copyTranfer(fromFileName,toFileName,addGlobalVariables,addNodeVariables,
-    ...                            addElementVariables,addElementAttributes)
+    >>> toFileHandle = copyTransfer(fromFileName,toFileName,addGlobalVariables,addNodeVariables,
+    ...                             addElementVariables,addElementAttributes)
 
     >>> ## Fill in new variables
 
