--- a/packages/seacas/scripts/exodus-3.py.in
+++ b/packages/seacas/scripts/exodus-3.py.in
@@ -111,8 +111,8 @@ Authors:
   Greg Sjaardema   (gdsjaar@sandia.gov)
 """
 
-### Documentation is generated on a Mac laptop using:
-### pdoc --force --html ../lib/exodus.py
+## Documentation is generated on a Mac laptop using:
+## pdoc --force --html ../lib/exodus.py
 
 sys.dont_write_bytecode = True
 
@@ -322,7 +322,8 @@ def ex_obj_to_inq(objType):
 
     if objType in entity_dictionary:
         return entity_dictionary[objType]
-    return -1 # Invalid request
+    return -1  # Invalid request
+
 
 def ex_entity_type(varType):
     """
@@ -620,11 +621,11 @@ class exodus:
         EXODUS_LIB.ex_put_init_ext(self.fileId, byref(p))
         return True
 
+
     #
     # copy to a new database
     #
     # --------------------------------------------------------------------
-
     def copy(self, fileName, include_transient=False):
         """
         copies exodus database to file_name and returns this copy as a
@@ -1923,7 +1924,7 @@ class exodus:
         assert len(connectivity) == (numBlkElems * numNodesPerElem)
         self.__ex_put_elem_conn(object_id, connectivity)
 
-   # --------------------------------------------------------------------
+    # --------------------------------------------------------------------
 
     def get_elem_attr(self, elem_blk_id):
         """
@@ -2335,7 +2336,6 @@ class exodus:
         -------
             <list<string>>  eprop_names
         """
-        names = []
         names = self.__ex_get_prop_names('EX_ELEM_BLOCK', 'EX_INQ_EB_PROP')
         return list(names)
 
@@ -2908,7 +2908,6 @@ class exodus:
         -------
             <list<string>>  nsprop_names
         """
-        names = []
         names = self.__ex_get_prop_names('EX_NODE_SET', 'EX_INQ_NS_PROP')
         return list(names)
 
@@ -3545,7 +3544,6 @@ class exodus:
         -------
             <list<string>>  ssprop_names
         """
-        names = []
         names = self.__ex_get_prop_names('EX_SIDE_SET', 'EX_INQ_SS_PROP')
         return list(names)
 
@@ -4275,7 +4273,6 @@ class exodus:
     # --------------------------------------------------------------------
 
     def __ex_inquire_float(self, inq_id):
-        val = c_int(0)
         dummy_char = create_string_buffer(MAX_LINE_LENGTH + 1)
         ret_float = c_float(0.0)
         if EXODUS_LIB.ex_int64_status(self.fileId) & EX_INQ_INT64_API:
@@ -4299,7 +4296,6 @@ class exodus:
     # --------------------------------------------------------------------
 
     def __ex_inquire_int(self, inq_id):
-        val = c_longlong(0)
         val = EXODUS_LIB.ex_inquire_int(self.fileId, inq_id)
         if val < 0:
             raise Exception(
@@ -4584,7 +4580,6 @@ class exodus:
         inq_type = c_int(ex_inquiry(inqType))
         num_objs = c_int(self.__ex_inquire_int(inq_type))
         numObjs = num_objs.value
-        id_map = []
         if EXODUS_LIB.ex_int64_status(self.fileId) & EX_IDS_INT64_API:
             id_map = (c_longlong * numObjs)()
         else:
@@ -4606,7 +4601,6 @@ class exodus:
         num_objs = c_int(self.__ex_inquire_int(inq_type))
         numObjs = num_objs.value
         assert numObjs == len(idMap)
-        id_map = []
         if EXODUS_LIB.ex_int64_status(self.fileId) & EX_IDS_INT64_API:
             id_map = (c_longlong * numObjs)()
             for i in range(numObjs):
