--- a/.travis.yml
+++ b/.travis.yml
@@ -44,13 +44,16 @@ before_install:
   # C++14
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo apt-get update -qq
-  - sudo apt-get -y install g++-7
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 90
-  - sudo apt-get -y install gfortran-7
-  - sudo update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-7 90
+  - if [ -n "$MPI" ]; then 
+       sudo apt-get -y install -q mpich libmpich-dev
+    else
+       sudo apt-get -y install g++-7
+       sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 90
+       sudo apt-get -y install gfortran-7
+       sudo update-alternatives --install /usr/bin/gfortran gfortran /usr/bin/gfortran-7 90
+    fi
   - sudo apt-get -y install libz-dev
   - sudo apt-get -y install python3
-  - if [ -n "$MPI" ]; then sudo apt-get -y install -q mpich libmpich-dev; fi
   - GNU_PARALLEL=OFF ./install-tpl.sh 
 
 before_script:
